# car

./: .gitignore  CLAUDE.md  Makefile  PLAN.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: jetson-deploy.md  jetson-run.md  jetson-shell.md  stop-stream.md  stop.md  stream.md  test-camera.md  test-hardware.md
configs/: default.yaml
configs/behavior/: default.yaml
configs/calibration/: default.yaml
configs/follow/: default.yaml
configs/hardware/: jetson.yaml  mock.yaml
reference/: servoPlay.py
scripts/: calibrate.py  calibrate_depth.py  find_center.py  find_limits.py  stream_camera.py  test_camera.py  test_camera_noinfo.py  test_camera_safe.py  test_hardware.py  test_servo.py  wander_demo.py
src/pilotnano/: __init__.py  app.py  config.py
src/pilotnano/behavior/: base.py  emergency_stop.py  manager.py  obstacle_avoidance.py  passthrough.py  recovery.py
src/pilotnano/bus/: __init__.py  base.py  local.py  messages.py
src/pilotnano/calibration/: auto_calibrator.py  motion_estimator.py  steering_calibrator.py  throttle_calibrator.py
src/pilotnano/hardware/: __init__.py  base.py  mock.py  pca9685.py  realsense.py
src/pilotnano/modes/: __init__.py  base.py  manual.py  wander.py
src/pilotnano/perception/: depth_analyzer.py
src/pilotnano/utils/: logging.py
